--- a/HTML - PERSONAL SITE/index.html
+++ b/HTML - PERSONAL SITE/index.html
@@ -15,7 +15,6 @@
 		<h1><a href="https://github.com/CHENG-LIANG1" target="_blank">萝卜仙子</a></h1>
 		<p><em> <strong>iOS</strong> and <strong>Flutter</strong> Developer</em></p>
 		
-		
 		<hr>
 
 		<h3>Education</h3>
@@ -23,15 +22,41 @@
 			<li>Bachelor of IT - Queensland University of Technology</li>
 		</ul>
 
-		<h3>Hobbies</h3>
-		<ol>
-			<li>Smart Devices</li>
-			<li>Mechanical Keyboard</li>
-			<li>Computer Hardware</li>
-			<li>Gundam Models</li>
-			<li>Video Games</li>
-		</ol>
+		<h3>Work Experience</h3>
 
+		<hr>
+
+		<table>
+
+			<thead>
+				<tr>
+					<th>Dates</th>
+					<th>Work</th>
+				</tr>
+			</thead>
+
+
+
+			<tbody>
+				<tr> 
+					<td>2021 - 2023</td>
+					<td>Fulltime - Software Developer@HolyBlade Network</td>
+				</tr>
+	
+				<tr> 
+					<td>2021</td>
+					<td>Parttime - Software Developer@Bernina Sewing Center</td>
+				</tr>
+			</tbody>
+
+
+		</table>
+
+		<hr>
+
+
+		<a href="./hobbies.html">My Hobbies</a>
+    <a href="./contact-me.html">Contact Me</a>
 			
 	</body>
 </html>
