--- a/HTML - PERSONAL SITE/index.html
+++ b/HTML - PERSONAL SITE/index.html
@@ -11,10 +11,23 @@
 
 
 	<body>
-		<img src="./profile.jpeg" alt="a profile image">
-		<h1><a href="https://github.com/CHENG-LIANG1" target="_blank">萝卜仙子</a></h1>
-		<p><em> <strong>iOS</strong> and <strong>Flutter</strong> Developer</em></p>
 		
+
+		<table cellspacing="20">
+			<tr>
+				<td><img src="./profile.jpeg" alt="a profile image" width="100px"></td>
+				<td>
+
+					<h1><a href="https://github.com/CHENG-LIANG1" target="_blank">萝卜仙子</a></h1>
+					<p><em> <strong>iOS</strong> and <strong>Flutter</strong> Developer</em></p>
+					
+					<hr>
+
+				</td>
+			</tr>
+
+		</table>
+
 		<hr>
 
 		<h3>Education</h3>
@@ -24,7 +37,7 @@
 
 		<h3>Work Experience</h3>
 
-		<hr>
+
 
 		<table>
 
@@ -52,7 +65,27 @@
 
 		</table>
 
+		<h3>Skills</h3>
+		<table cellspacing="10">
+			<tr>
+				<td>
+					iOS Development 🌟🌟🌟
+				</td>
+				<td>
+					Web Development 🌟🌟🌟
+				</td>
+			</tr>
+
+			<tr>
+				<td>
+					Flutter Development 🌟🌟🌟🌟
+				</td>
+			</tr>
+		</table>
+
+
 		<hr>
+
 
 
 		<a href="./hobbies.html">My Hobbies</a>
