completed html module

--- a/HTML - PERSONAL SITE/index.html
+++ b/HTML - PERSONAL SITE/index.html
@@ -35,11 +35,13 @@
 			<li>Bachelor of IT - Queensland University of Technology</li>
 		</ul>
 
+
+		<hr>
 		<h3>Work Experience</h3>
 
 
 
-		<table>
+		<table cellspacing="10">
 
 			<thead>
 				<tr>
@@ -65,20 +67,27 @@
 
 		</table>
 
+		<hr>
 		<h3>Skills</h3>
+
+
+		
 		<table cellspacing="10">
 			<tr>
 				<td>
-					iOS Development 🌟🌟🌟
+					iOS Development
 				</td>
 				<td>
-					Web Development 🌟🌟🌟
+					🌟🌟🌟
 				</td>
 			</tr>
 
 			<tr>
 				<td>
-					Flutter Development 🌟🌟🌟🌟
+					Flutter Development 
+				</td>
+				<td>
+					🌟🌟🌟
 				</td>
 			</tr>
 		</table>
