--- a/HTML - PERSONAL SITE/contact-me.html
+++ b/HTML - PERSONAL SITE/contact-me.html
@@ -11,5 +11,21 @@
         <p>Email: liangcheng2456@gmail.com</p>
         <p>Wechat: htcm8m9</p>
         <p>Phone: 17887962464</p>
+
+        <hr>
+
+        <form action="mailto:liangcheng2456@gmail.com" method="post" enctype="text/plain">
+            <label for="">Your Name:</label>
+            <input type="text" name="yourName"><br>
+            <label>Your Email:</label>
+            <input type="email" name="yourEmail" id=""> <br>
+            <label>Your Message:</label><br>
+            <textarea name="name" id="" cols="30" rows="10"></textarea>
+            <input type="submit">
+        </form>
+
+
+
+
     </body>
 </html>
