--- a/CSS - Personal Site/index.html
+++ b/CSS - Personal Site/index.html
@@ -8,7 +8,25 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
 </head>
+
 <body>
+    <div class="top-container">
+        <img src="images/cloud.png" alt="cloud-img">
+        <h1>Hi, Dyling Light</h1>
+        <p>A <span class="underline">Flutter</span> Developer</p>    
+        <img src="images/cloud.png" alt="cloud-img">
+        <img src="images/mountain.png" alt="mountain-img">
+    </div>
+
+    <div class="middle-container">
+
+    </div>
+
+    <div class="bottom-container">
+
+    </div>
+
+
 
     
 </body>
