--- a/CSS - Personal Site/index.html
+++ b/CSS - Personal Site/index.html
@@ -24,11 +24,13 @@
 
     <div class="middle-container">
         <div class="profile">
-          <img src="https://cdnv2.ruguoapp.com/FmFfP6k_E5-QILpyGZYAMj6Q0VBfv2.jpg?imageMogr2/auto-orient/heic-exif/1/format/jpeg/thumbnail/!300x300r/gravity/Center/crop/!300x300a0a0" alt="profile-img">
-          <h2>Louis Liang</h2>
-          <h2>A Frontend Developer</h2>
+          <img class="profile-img" src="https://cdnv2.ruguoapp.com/FmFfP6k_E5-QILpyGZYAMj6Q0VBfv2.jpg?imageMogr2/auto-orient/heic-exif/1/format/jpeg/thumbnail/!300x300r/gravity/Center/crop/!300x300a0a0" alt="profile-img">
+          <h2>Hello</h2>
+          <p>A Frontend Developer based in Shanghai, 2 yrs exp in iOS & Flutter</p>
         </div>
+
         <hr>
+
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
@@ -42,7 +44,9 @@
             <p class="flutter-skill-description">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
           </div>
         </div>
+
         <hr>
+
         <div class="contact-me">
           <h2>Get In Touch</h2>
           <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
