--- a/CSS - Personal Site/index.html
+++ b/CSS - Personal Site/index.html
@@ -17,7 +17,7 @@
     <div class="top-container">
         <img src="images/cloud.png" alt="cloud-img" class="top-cloud">
         <h1>I'm Cheng</h1>
-        <h2 class="bio">A <span class="underline">Flutter</span> Developer</h2>    
+        <h2 class="bio">A <span class="underline">Mobile</span> Developer</h2>    
         <img src="images/cloud.png" alt="cloud-img" class="bottom-cloud">
         <img src="images/mountain.png" alt="mountain-img">
     </div>
@@ -49,7 +49,7 @@
 
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+          <a class="btn" href="mailto:liangcheng2456@gmail.com">CONTACT ME</a>
         </div>
       </div>
       
@@ -57,13 +57,10 @@
       <div class="bottom-container">
         <a class="footer-link" href="https://github.com/CHENG-LIANG1">Github</a>
         <a class="footer-link" href="https://web.okjike.com/u/CC67F9FA-ECA4-4D00-AE36-4BE7B0D07541">Jike</a>
-        <p>© Cheng Liang.</p>
+        <p class="copyright">© Cheng Liang.</p>
       </div>
       
 
-    <div class="bottom-container">
-
-    </div>
 
 
 
